--- a/.env.example
+++ b/.env.example
@@ -1,23 +1,23 @@
 APP_ENV=local
-APP_KEY=base64:bSBASHa69tir//SEwxpZTL5kbY0rkvkcy630cFW7NWw=
+APP_KEY=base64:HpWrGndSa+wOXqXT8jT4y1uZpHFncc55hkbc1FNTxgM=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
-APP_TITLE=GALASTER
+APP_TITLE=AMB经营管理平台
 
 DB_CONNECTION=mysql
 DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=ambsuite
+DB_USERNAME=root
+DB_PASSWORD=root
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 SESSION_DRIVER=file
 QUEUE_DRIVER=sync
 
-REDIS_HOST=localhost
+REDIS_HOST=redis
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
@@ -25,9 +25,19 @@ MAIL_DRIVER=smtp
 MAIL_HOST=mailtrap.io
 MAIL_PORT=2525
 MAIL_USERNAME=null
-MAIL_PASSWORD=null
+MAIL_PASSWORD=eqkpghmquwhwcada
 MAIL_ENCRYPTION=null
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
+
+#管理员配置
+GMF_ADMIN_USER_ID=ec5aef60372b11e7b2612d7b7dc34435
+GMF_ADMIN_USER_EMAIL=admin@amb.com
+GMF_ADMIN_USER_PWD=123456
+
+GMF_AUTH_REDIRECT=/app/dashboard
+GMF_OAUTH_CLIENT_USER=ec5aef60372b11e7b2612d7b7dc34435
+GMF_OAUTH_CLIENT_ID=ambCloudERP
+GMF_OAUTH_CLIENT_SECRET=cc2a153034c311e7ac187b3124cdcd94
