--- a/composer.json.example
+++ b/composer.json.example
@@ -1,17 +1,17 @@
 {
-    "name": "ggoop/galaster",
+    "name": "absuite/suite-laravel",
     "description": "The Laravel Framework.",
-    "keywords": ["framework", "galaster"],
+    "keywords": ["framework", "suite","amb"],
     "license": "MIT",
     "type": "project",
     "require": {
         "php": ">=5.6.4",
-        "predis/predis": "^1.1",
-		"ggoop/gmf-sys": "dev-master",
-		"ggoop/gmf-cbo": "dev-master",
-		"ggoop/gmf-amiba": "dev-master",
-		"laravel/tinker": "~1.0",
-		"simplesoftwareio/simple-qrcode": "^1.5"
+        "ggoop/gmf-sys": "dev-master",
+        "ggoop/gmf-passport": "dev-master",
+        "absuite/suite-cbo": "dev-master",
+        "absuite/suite-amiba": "dev-master",
+        "absuite/suite-bec": "dev-master",
+        "laravel/tinker": "~1.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
