--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_ENV=local
 APP_KEY=base64:HpWrGndSa+wOXqXT8jT4y1uZpHFncc55hkbc1FNTxgM=
-APP_DEBUG=true
+APP_DEBUG=false
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 APP_TITLE=AMB经营管理平台
