--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,6 @@
         "guzzlehttp/guzzle": "~6.0",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
-        "ggoop/gmf-sys": "dev-master",
-        "ggoop/gmf-passport": "dev-master",
         "league/oauth2-server": "^6.0",
         "phpseclib/phpseclib": "^2.0",
         "predis/predis": "^1.1",
@@ -30,6 +28,8 @@
         ],
         "psr-4": {
             "App\\": "app/",
+            "Gmf\\Sys\\":"../../gmf/gmf-sys/src/",
+            "Gmf\\Passport\\":"../../gmf/gmf-passport/src/",
             "Suite\\Cbo\\":"../suite-cbo/src/",
             "Suite\\Amiba\\":"../suite-amiba/src/",
             "Suite\\Bec\\":"../suite-bec/src/",
