--- a/.env
+++ b/.env
@@ -3,7 +3,8 @@ APP_KEY=base64:HpWrGndSa+wOXqXT8jT4y1uZpHFncc55hkbc1FNTxgM=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
-APP_TITLE=amb经营管理平台
+APP_NAME=amb经营管理平台
+APP_LOG=daily
 
 DB_CONNECTION=mysql
 DB_HOST=localhost
@@ -41,3 +42,6 @@ GMF_AUTH_REDIRECT=/app/dashboard
 GMF_OAUTH_CLIENT_USER=ec5aef60372b11e7b2612d7b7dc34435
 GMF_OAUTH_CLIENT_ID=ambCloudERP
 GMF_OAUTH_CLIENT_SECRET=cc2a153034c311e7ac187b3124cdcd94
+
+GMF_ENT_ID=4f95c06028d511e7bb351569a8a51d7d
+GMF_ENT_NAME=演示企业
