--- a/package.json
+++ b/package.json
@@ -12,17 +12,19 @@
   "devDependencies": {
     "axios": "^0.16.2",
     "cross-env": "^5.0.1",
-    "laravel-mix": "^1.0",
     "highcharts": "^5.0.10",
+    "laravel-mix": "^1.4.5",
     "lodash": "^4.17.4",
+    "raw-loader": "^0.5.1",
+    "uuid": "^3.0.1",
     "vue": "^2.3.*",
     "vue-router": "^2.3.0",
-    "uuid": "^3.0.1",
-    "raw-loader": "^0.5.1",
-    "babel-core": "^6.23.1"
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1"
   },
   "dependencies": {
-    "d3": "^4.8.0",
+    "d3": "^4.11.0",
     "iscroll": "^5.2.0",
     "moment": "^2.18.1"
   }
