--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "zendframework/zend-diactoros": "~1.0"
     },
     "require-dev": {
+        "doctrine/dbal": "^2.5",
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "6.0.*"
