--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "uuid": "^3.0.1",
     "vue": "^2.3.*",
     "vue-router": "^2.3.0",
+    "quill": "^1.3.3",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.1"
