--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "d3": "^4.11.0",
     "iscroll": "^5.2.0",
-    "moment": "^2.18.1"
+    "moment": "^2.18.1",
+    "xlsx": "^0.11.6"
   }
 }
