--- a/composer.json
+++ b/composer.json
@@ -13,13 +13,13 @@
         "league/oauth2-server": "^6.0",
         "phpseclib/phpseclib": "^2.0",
         "predis/predis": "^1.1",
-        "ggoop/gmf-sys": "^1.2",
-        "ggoop/gmf-ac": "^1.2",
-        "ggoop/gmf-passport": "^1.2",
-        "absuite/suite-cbo": "^1.2",
-        "absuite/suite-amiba": "^1.2",
-        "absuite/suite-bec": "^1.2",
-        "absuite/suite-mobile": "^1.2",
+        "ggoop/gmf-sys": "~1.2",
+        "ggoop/gmf-ac": "~1.2",
+        "ggoop/gmf-passport": "~1.2",
+        "absuite/suite-cbo": "~1.2",
+        "absuite/suite-amiba": "~1.2",
+        "absuite/suite-bec": "~1.2",
+        "absuite/suite-mobile": "~1.2",
         "simplesoftwareio/simple-qrcode": "^1.5",
         "symfony/psr-http-message-bridge": "~1.0",
         "zendframework/zend-diactoros": "~1.0"
