--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "league/oauth2-server": "^6.0",
         "phpseclib/phpseclib": "^2.0",
         "predis/predis": "^1.1",
+        "maatwebsite/excel": "~2.1.0",
         "simplesoftwareio/simple-qrcode": "^1.5",
         "symfony/psr-http-message-bridge": "~1.0",
         "zendframework/zend-diactoros": "~1.0"
