--- a/package.json
+++ b/package.json
@@ -11,23 +11,23 @@
   },
   "devDependencies": {
     "axios": "^0.16.2",
-    "cross-env": "^5.0.1",
-    "highcharts": "^5.0.10",
-    "laravel-mix": "^1.4.5",
-    "lodash": "^4.17.4",
-    "raw-loader": "^0.5.1",
-    "uuid": "^3.0.1",
-    "vue": "^2.3.*",
-    "vue-router": "^2.3.0",
-    "quill": "^1.3.3",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-es2015": "^6.24.1"
+    "babel-preset-es2015": "^6.24.1",
+    "cross-env": "^5.1.1",
+    "highcharts": "^5.0.14",
+    "laravel-mix": "^1.4.5",
+    "lodash": "^4.17.4",
+    "quill": "^1.3.3",
+    "raw-loader": "^0.5.1",
+    "uuid": "^3.0.1",
+    "vue": "^2.5.3",
+    "vue-router": "^2.8.1"
   },
   "dependencies": {
     "d3": "^4.11.0",
     "iscroll": "^5.2.0",
-    "moment": "^2.18.1",
-    "xlsx": "^0.11.6"
+    "moment": "^2.19.1",
+    "xlsx": "^0.11.8"
   }
 }
