--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,20 @@
 {
-  "presets": ["es2015"],
-  "plugins": ["transform-async-to-generator", ["transform-runtime",
-  {
-    "helpers": false,
-    "polyfill": false,
-    "regenerator": true
-  }]]
+  "presets": [
+    "es2015",
+    "stage-3",
+    [
+      "env",
+      {
+        "modules": false,
+        "useBuiltIns": false
+      }
+    ]
+  ],
+  "plugins": [
+    "syntax-dynamic-import"
+  ],
+  "ignore": [
+    "dist/*.js",
+    "public/*.js"
+  ]
 }
