--- a/package.json
+++ b/package.json
@@ -13,26 +13,25 @@
     "axios": "^0.16.2",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-stage-3": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-3": "^6.24.1",
     "cross-env": "^5.1.1",
     "highlight.js": "^9.12.0",
-    "laravel-mix": "^1.4.5",
-    "ora": "^1.3.0",
-    "raw-loader": "^0.5.1",
-    "sinon": "^4.1.1",
-
-    "vue-style-loader": "^3.0.3",
-    "vue-template-compiler": "^2.5.3",
-    "vuelidate": "^0.6.1",
-    "vuex": "^3.0.1",
-    "vuex-router-sync": "^5.0.0",
-    "vue-i18n": "^7.3.2",
-    "vue-loader": "^13.4.0",
-    "raf": "^3.4.0",
     "is-firefox": "^1.0.3",
     "is-promise": "^2.1.0",
-    "url-loader": "^0.6.2"
+    "laravel-mix": "^1.4.5",
+    "ora": "^1.3.0",
+    "raf": "^3.4.0",
+    "raw-loader": "^0.5.1",
+    "sinon": "^4.1.1",
+    "url-loader": "^0.6.2",
+    "vue-i18n": "^7.3.2",
+    "vue-loader": "^13.4.0",
+    "vue-style-loader": "^3.0.3",
+    "vue-template-compiler": "^2.5.9",
+    "vuelidate": "^0.6.1",
+    "vuex": "^3.0.1",
+    "vuex-router-sync": "^5.0.0"
   },
   "dependencies": {
     "d3": "^4.11.0",
@@ -40,16 +39,13 @@
     "deepmerge": "^2.0.1",
     "fuzzysearch": "^1.0.3",
     "highcharts": "^5.0.14",
-
     "lodash": "^4.17.4",
     "popper.js": "^1.13.0",
     "quill": "^1.3.3",
-
     "uuid": "^3.0.1",
-    "vue": "^2.5.3",
-
+    "vue": "^2.5.9",
+    "vue-ga": "^1.0.0",
     "vue-router": "^3.0.1",
-
     "xlsx": "^0.11.8"
   },
   "engines": {
