--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "lodash": "^4.17.4",
     "popper.js": "^1.13.0",
     "quill": "^1.3.3",
+    "tinymce": "^4.7.4",
     "uuid": "^3.0.1",
     "vue": "^2.5.9",
     "vue-ga": "^1.0.0",
