--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
 /node_modules
 /public/storage
-/public/*.json
 /public/hot
 /storage/*.key
 /vendor
 /.vagrant
 /.idea
+composer.json
 Homestead.json
 Homestead.yaml
 /*.log
