--- a/.env
+++ b/.env
@@ -26,7 +26,7 @@ MAIL_DRIVER=smtp
 MAIL_HOST=mailtrap.io
 MAIL_PORT=2525
 MAIL_USERNAME=null
-MAIL_PASSWORD=eqkpghmquwhwcada
+MAIL_PASSWORD=
 MAIL_ENCRYPTION=null
 
 PUSHER_APP_ID=
