--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "lodash": "^4.17.4",
     "popper.js": "^1.13.0",
     "quill": "^1.3.3",
+    "screenfull": "^3.3.2",
     "tinymce": "^4.7.4",
     "uuid": "^3.0.1",
     "vue": "^2.5.9",
