--- a/.env.example
+++ b/.env.example
@@ -45,3 +45,6 @@ GMF_OAUTH_CLIENT_SECRET=cc2a153034c311e7ac187b3124cdcd94
 
 GMF_ENT_ID=4f95c06028d511e7bb351569a8a51d7d
 GMF_ENT_NAME=演示企业
+
+DEMO_USER_ID=ec5aef60372b11e7b2612d7b7dc34435
+DEMO_ENT_ID=4f95c06028d511e7bb351569a8a51d7d
