--- a/.env.example
+++ b/.env.example
@@ -48,3 +48,13 @@ GMF_ENT_NAME=演示企业
 
 DEMO_USER_ID=ec5aef60372b11e7b2612d7b7dc34435
 DEMO_ENT_ID=4f95c06028d511e7bb351569a8a51d7d
+
+
+#默认接口取数
+#sqlsrv,mysql
+DTI_DB_DRIVER=sqlsrv
+DTI_DB_HOST=localhost
+DTI_DB_PORT=1433
+DTI_DB_DATABASE=
+DTI_DB_USERNAME=sa
+DTI_DB_PASSWORD=123456
