--- a/package.json
+++ b/package.json
@@ -10,20 +10,53 @@
     "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
   },
   "devDependencies": {
+    "@antv/f2": "^3.1.8",
+    "axios": "^0.17.1",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-3": "^6.24.1",
+    "chart.js": "^2.7.1",
     "cross-env": "^5.1",
-    "laravel-mix": "^2.0"
+    "date-fns": "^1.29.0",
+    "deepmerge": "^2.0.1",
+    "fuzzysearch": "^1.0.3",
+    "highcharts": "^5.0.14",
+    "highlight.js": "^9.12.0",
+    "is-firefox": "^1.0.3",
+    "is-promise": "^2.1.0",
+    "iscroll": "^5.2.0",
+    "laravel-mix": "^2.0",
+    "lodash": "^4.17.4",
+    "moment": "^2.20.1",
+    "ora": "^1.3.0",
+    "pdfjs-dist": "^2.0.252",
+    "popper.js": "^1.13.0",
+    "prettier": "^1.12.1",
+    "prismjs": "^1.10.0",
+    "promise-polyfill": "^7.0.0",
+    "raf": "^3.4.0",
+    "raw-loader": "^0.5.1",
+    "sinon": "^4.1.1",
+    "tinymce": "^4.7.4",
+    "url-loader": "^0.6.2",
+    "uuid": "^3.0.1",
+    "xlsx": "^0.11.16"
   },
   "dependencies": {
-    "d3": "^5.4.0",
-    "gmf-ui": "^1.1.0",
-    "pdfjs-dist": "^2.0.252",
-    "prismjs": "^1.10.0",
     "screenfull": "^3.3.2",
-    "vue": "^2.5.13"
+    "vue": "^2.5.13",
+    "vue-ga": "^1.0.0",
+    "vue-i18n": "^7.3.3",
+    "vue-loader": "^13.6.2",
+    "vue-router": "^3.0.1",
+    "vue-style-loader": "^3.0.3",
+    "vue-template-compiler": "^2.5.13",
+    "vuelidate": "^0.6.1",
+    "vuex": "^3.0.1",
+    "vuex-router-sync": "^5.0.0"
   },
   "engines": {
     "node": ">= 7.0"
