--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,8 @@ APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 APP_NAME=amb经营管理平台
-APP_LOG=daily
+
+LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
 DB_HOST=localhost
