--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,7 @@ APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 APP_NAME=amb经营管理平台
 
-LOG_CHANNEL=stack
+LOG_CHANNEL=daily
 
 DB_CONNECTION=mysql
 DB_HOST=localhost
