--- a/.env.example
+++ b/.env.example
@@ -47,6 +47,7 @@ GMF_OAUTH_CLIENT_SECRET=01e8539477031280829fdf1a6cec8a74
 GMF_ENT_ID=01e853947bda16d0bffe63bae7ec2c3b
 GMF_ENT_NAME=演示企业
 
+GMF_RUNTIME_HOST=http://127.0.0.1:3009
 
 #默认接口取数
 #sqlsrv,mysql
